--- a/style.css
+++ b/style.css
@@ -5,23 +5,37 @@ body {
 #cabecalho {
   position: fixed;
   top: 0;
+  background-color: rgb(74 , 207 , 74);
+  padding-right: 665px;
+  margin: auto;
 }
 
 #minha_foto {
   width: 250px;
-  margin-top: 60px;
+  margin-top: 120px;
 }
 
 .fonte_hx {
-  font-family: Nerko One, cursive;
+  font-family: Ubuntu, sans-serif;
   font-size: 40px;
   line-height: 20px;
-  color: green;
+  color: rgb(74 , 207 , 74);
 }
 
 #titulo {
-  font-family: Nerko One, cursive;
+  font-family: Ubuntu, sans-serif;
   font-size: 40px;
   line-height: 20px;
-  color: green; 
+  color: rgb(253 , 251 , 251);
+}
+
+#rodape {
+  background-color: rgb(74 , 207 , 74);
+  color: rgb(253 , 251 , 251);
+  padding-right: 665px;
+}
+
+#links_internos {
+  color: rgb(253 , 251 , 251);
+  line-height: 25px;
 }
