--- a/style.css
+++ b/style.css
@@ -1,17 +1,18 @@
 * {
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-family: Cambria, Cochin, Georgia, Times, Times New Roman, serif;
   margin: 0;
 }
 
 h1 {
-  font-family: BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Open Sans, sans-serif;
   font-size: 50px;
   color: grey;
-  text-shadow: 2px 2px #000000;
+  text-shadow: 2px 2px black;
   padding: 20px;
 }
 
 h3 {
+  margin-left: 25px;
   padding: 25px;
 }
 
@@ -30,7 +31,6 @@ main {
 
 #left_side_screen {
   border: 1px black solid;
-  font-size: 15px;
   padding: 20px;
   height: 100%;
   width: 20%;
@@ -48,7 +48,7 @@ body {
   position: fixed;
   text-align: center;
   top: 0;
-  background-image: linear-gradient(#9acd32, #008000);
+  background-image: linear-gradient(yellowgreen, green);
   width: 100%;
 }
 
@@ -56,6 +56,15 @@ nav {
   padding: 4px;
   background-color: 008000;
   font-size: 14px;
+}
+
+#learning {
+  padding: 20px 60px 20px 60px;
+  border-style: solid;
+  border-collapse: collapse;
+  box-shadow: 10px 5px 5px black;
+  width: 600px;
+  text-align: center;
 }
 
 #rodape {
@@ -69,17 +78,30 @@ nav {
   text-align: center;
 }
 
+.lado-esquerdo {
+  font-size: 15px;
+  padding-left: 25px;
+}
+
+#Learn-history {
+  padding-bottom: 49px;
+}
+
 #minha_foto {
-  box-shadow: 2px 2px 2px 2px;
+  box-shadow: 2px;
   padding: 20px;
   margin: 5%;
   width: 200px;
 }
 
 #licoes_aprendidas {
+  border: 3px solid black;
+  text-align: left;
   display: inline-block;
 }
 
 #licoes_a_aprender {
+  border: 3px solid black;
   display: inline-block;
+  text-align: left;
 }
