Added nav and changed section and article to be displayed side by side (Bonus Requisite - 15)

--- a/style.css
+++ b/style.css
@@ -17,22 +17,49 @@ body {
 }
 
 #minha_foto {
+  display: block;
   margin-top: 5%;
   width: 300px;
 }
 
 #licoes_aprendidas,#licoes_a_aprender {
-  border: solid;
-  font-size: 18px;
+  border: dotted;
+  font-size: 16px;
   line-height: 1.25em;
-  padding-bottom: 2%;
-  padding-left: 3%;
-  padding-right: 3%;
-  padding-top: 2%;
-  width: 20%;
+  margin-right: auto;
+  padding-bottom: auto;
+  padding-left: auto;
+  padding-right: auto;
+  padding-top: auto;
+  width: 370px; 
+}
+
+div {
+  display: inline-block;
 }
 
 #rodape {
   background-color: rgb(51 , 51 , 51);
+  bottom: 0;
   color: rgb(255 , 255 , 255);
+  position: absolute;
+  width: 100%;
+}
+
+.lado-esquerdo {
+  float: left;
+}
+
+.lado-direito {
+  float: right;
+}
+
+a {
+  display: block;
+}
+
+#artigo {
+  padding-top: 50px;
+  padding-right: 150px;
+  width: 500px;
 }
