Structuring the page3.4 - corrections 3

--- a/style.css
+++ b/style.css
@@ -2,13 +2,13 @@ body {
   background-color: rgb(253 251 251);
   display: grid;
   grid-gap: 1rem;
-  grid-template-areas:
+  grid-template-areas: 
     'header header header'
     'aside-left article aside-right'
     'nav nav nav'
     'footer footer footer';
   grid-template-columns: 30% auto 20%;
-  grid-template-rows: 5em 30em 2em 1em;
+  grid-template-rows: 5em 30em 2em;
 }
 
 .header {
@@ -28,6 +28,18 @@ body {
 
 .article {
   grid-area: article;
+  font-family: fantasy;
+  font-weight: 100;
+  font-style: normal;
+  color: black;
+  font-size: medium;
+  font-stretch: semi-condensed;
+  letter-spacing: normal;
+  float: left;
+}
+
+#learning {
+  float: right;
 }
 
 .nav {
@@ -49,4 +61,10 @@ body {
   margin-top: 15px;
   margin-left: 35px;
   padding: 1px;
+}
+
+#licoes_aprendidas, #licoes_a_aprender {
+  font-family: sans-serif;
+  font-weight: 100;
+  font-size: x-large;
 }
