--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   background-attachment: fixed;
   background-color: rgb(253 , 251 , 251);
-  background-image: url("images/background_tec.jpg");
+  background-image: url('images/background_tec.jpg');
   background-size: cover;
   font-family: sans-serif;
   margin-top: 0;
@@ -30,7 +30,7 @@ header #titulo {
 
 .gradiente {
   background-image: linear-gradient(to right , rgb(0 , 152 , 255) , black);
-  color: rgb(255 , 255 , 255);
+  color: white;
   opacity: 0.8;
   text-align: center;
 }
@@ -70,11 +70,11 @@ header #titulo {
   text-align: center;
 }
 
-span.negrito {
+.negrito {
   font-weight: 600;
 }
 
-.preenchimento{
+.preenchimento {
   background-color: rgb(253 , 251 , 251);
   border: 3px solid rgb(0 , 152 , 255);
   box-shadow: 0 0 10px white;
@@ -137,7 +137,11 @@ a:hover img {
   z-index: 7;
 }
 
-h2 {
+.subtitulo {
+  display: none;
+}
+
+h3 {
   border-bottom: 1px solid rgb(0 , 152 , 255);
   padding-bottom: 10px;
   text-align: center;
@@ -147,38 +151,43 @@ h2 {
 
 #aprendizado {
   display: inline;
+  margin-top: 160px;
+  margin-left: 350px;
   text-align: justify;
   text-indent: 30px;
-  width: 250px;
-  float: left;
-  margin-top: 150px;
-  margin-left: 350px;
+  width: 400px;
   padding: 0 20px;
-}
-
-#sucesso {
-  display: inline-block;
-  position: relative;
-  left: 220px;
-  top: 150px;
-  width: 250px;
-  z-index: 7;
+  line-height: 30px;
 }
 
 #passagem_aprendizado {
   display: inline;
   text-align: justify;
   text-indent: 30px;
-  width: 450px;
-  float: right;
+  width: 400px;
   margin-top: 160px;
-  margin-right: 90px;
-  padding: 0 20px;
+  margin-right: 50px;
+  padding: 0 20px 13px 20px;
+  line-height: 30px;
+}
+
+.lado-esquerdo {
+  float: left;
+}
+
+.lado-direito {
+  float: right;
+}
+
+#sucesso {
+  float: left;
+  margin-right: 10px;
+  width: 213px;
 }
 
 #rodape {
   font-size: 12px;
-  margin-top: 30%;
+  margin-top: 42%;
   font-weight: 100;
   left: 0;
   padding: 6px 0;
@@ -187,21 +196,3 @@ h2 {
 em {
   font-weight: 600;
 }
-
-/* a {
-  color: white;
-  font-weight: 600;
-} */
-
-/* td {
-  text-align: left;
-} */
-
-/* tr {
-  line-height: 40px;
-} */
-
-/* #licoes_a_aprender {
-  padding-right: 10px;
-} */
-
