--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+a:hover img {
+  border: 2px solid rgb(22 , 104 , 158);
+  box-shadow: 0 0 20px white;
+}
+
+aside td {
+  margin-bottom: 4px;
+}
+
 body {
   background-attachment: fixed;
   background-color: rgb(253 , 251 , 251);
@@ -9,19 +18,150 @@ body {
   max-width: 1366px;
 }
 
-#cabecalho {
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 1366px;
-  z-index: 9;
+em {
+  font-weight: 600;
+}
 
+h3 {
+  border-bottom: 1px solid rgb(0 , 152 , 255);
+  font-size: 20px;
+  padding-bottom: 10px;
+  text-align: center;
+  text-indent: 0;
 }
 
 header #titulo {
   font-size: 30px;
   margin: 10px 0;
   text-align: center;
+}
+
+#aprendizado {
+  display: inline;
+  line-height: 30px;
+  margin-left: 350px;
+  margin-top: 160px;
+  padding: 0 20px;
+  text-align: justify;
+  text-indent: 30px;
+  width: 400px;
+}
+
+#cabecalho {
+  left: 0;
+  position: fixed;
+  top: 0;
+  width: 1366px;
+  z-index: 9;
+}
+
+#gitHub {
+  border-radius: 7px;
+  margin: 0 10px;
+  width: 28px;
+}
+
+#l_aprendidas {
+  display: inline-block;
+  left: 400px;
+  position: relative;
+  top: 100px;
+  width: 300px;
+  z-index: 7;
+}
+
+#linkedin {
+  border-radius: 5px;
+  width: 27px;
+}
+
+#lista1 {
+  display: inline-block;
+  left: 350px;
+  position: relative;
+  top: 100px;
+  z-index: 7;
+}
+
+#lista2 {
+  display: inline-block;
+  left: 450px;
+  position: relative;
+  top: 100px;
+  z-index: 7;
+}
+
+#minha_foto {
+  border: 4px solid rgb(22 , 104 , 158);
+  border-radius: 30px;
+  left: 30px;
+  position: fixed;
+  top: 20px;
+  width: 200px;
+  z-index: 10;
+}
+
+#navegacao {
+  display: inline-block;
+  position: fixed;
+  right: 10px;
+  top: 7px;
+  z-index: 11;
+}
+
+#passagem_aprendizado {
+  display: inline;
+  line-height: 30px;
+  margin-top: 160px;
+  margin-right: 50px;
+  padding: 0 20px 13px 20px;
+  text-align: justify;
+  text-indent: 30px;
+  width: 400px;
+}
+
+#pc {
+  display: inline-block;
+  left: 50px;
+  position: fixed;
+  top: 460px;
+  width: 150px;
+  z-index: 7;
+}
+
+#rodape {
+  font-size: 12px;
+  font-weight: 100;
+  left: 0;
+  margin-top: 42%;
+  padding: 6px 0;
+}
+
+#sobre {
+  border: 4px solid rgb(22 , 104 , 158);
+  display: inline-block;
+  font-size: 15px;
+  left: 10px;
+  padding-bottom: 20px;
+  position: fixed;
+  top: 245px;
+  z-index: 9;
+  width: 230px;
+}
+
+#sucesso {
+  float: left;
+  margin-right: 10px;
+  width: 213px;
+}
+
+#title_aside {
+  text-align: center;
+}
+
+#trybe {
+  border-radius: 5px;
+  width: 27px;
 }
 
 .destaque {
@@ -35,39 +175,12 @@ header #titulo {
   text-align: center;
 }
 
-#minha_foto {
-  border: 4px solid rgb(22 , 104 , 158);
-  border-radius: 30px;
-  position: fixed;
-  left: 30px;
-  top: 20px;
-  width: 200px;
-  z-index: 10;
+.lado-direito {
+  float: right;
 }
 
-#pc {
-  display: inline-block;
-  position: fixed;
-  left: 50px;
-  top: 460px;
-  width: 150px;
-  z-index: 7;
-}
-
-#sobre {
-  border: 4px solid rgb(22 , 104 , 158);
-  display: inline-block;
-  position: fixed;
-  left: 10px;
-  top: 245px;
-  z-index: 9;
-  width: 230px;
-  padding-bottom: 20px;
-  font-size: 15px;
-}
-
-#title_aside {
-  text-align: center;
+.lado-esquerdo {
+  float: left;
 }
 
 .negrito {
@@ -77,122 +190,12 @@ header #titulo {
 .preenchimento {
   background-color: rgb(253 , 251 , 251);
   border: 3px solid rgb(0 , 152 , 255);
-  box-shadow: 0 0 10px white;
   border-radius: 30px;
+  box-shadow: 0 0 10px white;
   opacity: 0.8;
   padding: 0 8px;
 }
 
-#navegacao {
-  display: inline-block;
-  position: fixed;
-  right: 10px;
-  top: 7px;
-  z-index: 11;
-}
-
-#linkedin {
-  width: 27px;
-  border-radius: 5px;
-}
-
-#trybe {
-  width: 27px;
-  border-radius: 5px;
-}
-
-#gitHub {
-  width: 28px;
-  border-radius: 7px;
-  margin: 0 10px;
-}
-
-a:hover img {
-  box-shadow: 0 0 20px white;
-  border: 2px solid rgb(22 , 104 , 158);
-}
-
-#lista1 {
-  display: inline-block;
-  position: relative;
-  left: 350px;
-  top: 100px;
-  z-index: 7;
-}
-
-#l_aprendidas {
-  display: inline-block;
-  position: relative;
-  left: 400px;
-  top: 100px;
-  width: 300px;
-  z-index: 7;
-}
-
-#lista2 {
-  display: inline-block;
-  position: relative;
-  left: 450px;
-  top: 100px;
-  z-index: 7;
-}
-
 .subtitulo {
   display: none;
-}
-
-h3 {
-  border-bottom: 1px solid rgb(0 , 152 , 255);
-  padding-bottom: 10px;
-  text-align: center;
-  font-size: 20px;
-  text-indent: 0;
-}
-
-#aprendizado {
-  display: inline;
-  margin-top: 160px;
-  margin-left: 350px;
-  text-align: justify;
-  text-indent: 30px;
-  width: 400px;
-  padding: 0 20px;
-  line-height: 30px;
-}
-
-#passagem_aprendizado {
-  display: inline;
-  text-align: justify;
-  text-indent: 30px;
-  width: 400px;
-  margin-top: 160px;
-  margin-right: 50px;
-  padding: 0 20px 13px 20px;
-  line-height: 30px;
-}
-
-.lado-esquerdo {
-  float: left;
-}
-
-.lado-direito {
-  float: right;
-}
-
-#sucesso {
-  float: left;
-  margin-right: 10px;
-  width: 213px;
-}
-
-#rodape {
-  font-size: 12px;
-  margin-top: 42%;
-  font-weight: 100;
-  left: 0;
-  padding: 6px 0;
-}
-
-em {
-  font-weight: 600;
 }
