--- a/style.css
+++ b/style.css
@@ -5,4 +5,184 @@ body {
 #cabecalho {
   position: fixed;
   top: 0;
+  min-width: 100%;
+  width: 500px;
+}
+
+#titulo {
+  text-align: center;
+  background-color: rgb(34, 146, 51);
+  font-weight: 800;
+}
+ 
+
+#minha_foto {
+  height:330px;                              border-radius: 200px;
+
+  
+
+}
+
+
+#quemsou {
+  margin-top: 150px;
+  min-height: 300px;
+}
+
+.rightApp {
+ 
+  float: right;
+  margin-top: 10px; 
+  font-size: 30px;
+  max-width: 800px;
+  
+  margin-right: 35px;;
+}
+
+.leftApp {
+  
+  float: left;
+  margin-top: 8px;
+  margin-left: 60px;
+}
+
+#main {
+  margin-top: 100px;
+  font-size: 30px;
+  
+}
+
+#pmain {
+  max-width: 45%;
+  float:left;
+  text-align: center;
+  margin-left: 50px ;
+  
+}
+
+#fototrybe {
+ 
+  margin-top: 100px;
+  margin-right: 75px;
+  padding: 80px 20px;
+  float:right;                               
+  
+}   
+
+.fotos {
+  display: inline-block;
+  
+}     
+
+
+
+.fotoMainLeft {
+  
+  max-width: 40%;
+  border-radius: 350px;
+  height: 500px;
+  background-color: grey;
+  margin-top: 80px;
+  margin-left: 60px;
+
+}
+
+.fotoMainRight {
+  float: right;
+  max-width: 40%;
+  border-radius: 500px;
+  height: 500px;
+  background-color: grey;
+  margin-top: 70px;
+  margin-right: 80px;
+}
+
+#plista {
+  font-size: 30px;
+  text-align: center;
+  max-width: 70%;
+  margin-left: 150px;
+  margin-top: 120px;
+  font-weight: 600;
+}
+
+#licoes_aprendidas {
+  font-size: 30px;
+  float: left;
+  margin-left: 250px;
+
+}
+
+#licoes_a_aprender {
+  font-size: 30px;
+  float: right;
+  margin-right: 250px;
+
+}
+
+.market {
+  margin-top: 500px;
+  
+  background-color: orange;
+  max-height: 1000px;
+  
+}
+
+.mktRight {
+  
+  float: right;
+  font-weight: 600;
+  font-size: 30px;
+  min-height: 320px;
+  
+  margin-right: 200px;
+  
+  
+
+  
+}
+
+.mktLeft {
+  
+  float: left;
+  font-weight: 600;
+  font-size: 30px;
+  min-height: 240px;
+  min-width: 300px;
+  
+  margin-left: 200px;
+  margin-top: 10px;
+  
+}
+
+
+}
+
+.verde {
+  color: rgb(34, 146, 51)
+}
+
+#sergin {
+  border-radius: 700px;
+  height: 300px;
+  
+}
+
+#tryber {
+  max-width: 1500px;
+  width: 100%;
+  height: 200px;
+}
+
+.linkin {
+ 
+ margin-top: 0;
+ margin-left: 200px;
+ margin-bottom: 30px;
+ font-weight: 600;
+ font-size: 30px;
+}
+
+#rodape {
+  text-align: center;
 }
