--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   font-family: 'Mukta', sans-serif;
 }
 
- #cabecalho {
+#cabecalho {
   position: fixed;
   margin-top: 0px;
   background-color : rgb(201, 136, 75);
@@ -17,7 +17,7 @@ body {
 }
 
 #titulo {
-  color: rgb(255, 255, 255);
+  color: white;
 }
 
 #minha_foto {
@@ -32,19 +32,38 @@ body {
   padding: 15%;
   padding-bottom: 60%;
   }
-  
   #licoes_aprendidas {
   padding-left: 20%;
   display: inline-block;
   }
 
-  h3{
+  h3 {
   background-color:rgb(201, 136, 75);
   line-height: 30px;
   border-radius: 10px;
   text-align: center;
-
   }
+  
+  .lado-esquerdo {
+  overflow: hidden;
+  margin-right: 5%;
+  text-align: justify;
+  font-size: 18px;
+  line-height: 30px;
+  float: left;
+  width: 35%;
+
+  
+  }
+
+  .lado-direito {
+  margin-left: 5%;
+  margin-bottom: 20%;
+  font-size: 18px;
+  line-height: 30px;
+  display: inline-block;
+  clear: both;
+ }
 
   h2 {
     font-size: 25px;
@@ -52,7 +71,7 @@ body {
     text-align: center;
     }
 
-.lado-direito{
+.lado-direito {
   margin-bottom: 20%;
   font-size: 18px;
   padding: 30%;
@@ -61,7 +80,6 @@ body {
   display: inline-block;
 
 }
-
 
 .lado-esquerdo {
     overflow : auto;
@@ -72,3 +90,4 @@ body {
     font-size: 18px;
     line-height: 30px;
   }
+
