--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body {
 
 .aside-left {
   grid-area: aside-left;
+  letter-spacing: 1px;
 }
 
 .aside-right {
@@ -49,9 +50,10 @@ body {
 }
 
 .nav {
+  letter-spacing: 1px;
   grid-area: nav;
   background: teal;
-  width: 27.1%;
+  width: 20%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -106,6 +108,7 @@ ul h2,ol h2 {
 
 .lado-direto {
   float: right;
+  letter-spacing: 1px;
 }
 
 .lado-esquerdo {
