--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@ ul {
   font-size: 30px;
   font-family: Oxanium, cursive;
   text-transform: uppercase;
+  padding-top: 140px;
   color: rgb(46 , 254 , 247);
   cursor: pointer;
 }
@@ -105,9 +106,9 @@ ul {
 
 
 #minha_foto {
-  position: relative;
-  left: 110px;
-  top: -80px;
+  position: absolute;
+  left: 160px;
+  top: 170px;
   width: 150px;
   height: 150px;
   border: 4px solid rgb(1 , 223 , 215);
