--- a/style.css
+++ b/style.css
@@ -1,12 +1,11 @@
 body {
   height: 100vh;
-  font-family: Arial, Helvetica, sans-serif;
   text-align: center;
   margin: auto;
   background-color: rgb(253, 251, 251);
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.1em;
-  letter-spacing: 1px;
+  line-height: auto;
   color: #2B2929;
 }
 
@@ -27,7 +26,7 @@ body {
   font-family: 'Nerko One', cursive;
 }
 
-.option{
+.option {
   text-decoration: none;
   color: gray;
 }
@@ -53,8 +52,8 @@ nav {
 }
 
 
-#lado-esquerdo {
-  padding-left: 100px;
+.lado-esquerdo {
+ padding: 10px;
   margin: auto;
   border-radius: 10px;
   width: 450px;
@@ -62,10 +61,9 @@ nav {
   margin-right: 50px;
   background-color: #a1eace;
   text-align: justify;
-  padding: 10px;
 }
 
-#lado-direito {
+.lado-direito {
   border-radius: 10px;
   width: 30%;
   display: inline-block;
@@ -75,7 +73,7 @@ nav {
   padding: 10px;
 }
 
-#lista1{
+#lista1 {
   border: 1px solid #0FA36B;
   margin-top: 50px;
   margin-right: 15px;
@@ -91,7 +89,7 @@ nav {
   display: inline-block;
 }
 
-#lista2{
+#lista2 {
   margin-top: 50px;
   display: inline-block;
   border: 1px solid #0FA36B;
@@ -142,11 +140,11 @@ td {
   font-style: oblique;
 }
 
-.rodape_titulo{
+.rodape_titulo {
   text-align: center;
 }
 
 .redes-sociais{
-  margin:10px;
+  margin: 10px;
   text-align: center;
 }
