Final Pagination-Part6

--- a/style.css
+++ b/style.css
@@ -114,3 +114,9 @@ ul h2,ol h2 {
 .lado-esquerdo {
   float: left;
 }
+
+#aprendizado {
+  letter-spacing: 1px;
+  font-family: fantasy;
+  color: aliceblue;
+}
