--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   height: 100vh;
   text-align: center;
   margin: auto;
-  background-color: rgb(253, 251, 251);
+  background-color: rgb(253 ,251 ,251);
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.1em;
   line-height: auto;
@@ -23,7 +23,7 @@ body {
 #titulo {
   position: absolute;
   left: 100px;
-  font-family: 'Nerko One', cursive;
+  font-family: 'Nerko One', 'Ancient Runes', cursive;
 }
 
 .option {
@@ -34,6 +34,7 @@ body {
 nav {
   margin-left: 100px;
 }
+
 .nav {
   display: inline-block;
   padding: 8px;
@@ -53,7 +54,7 @@ nav {
 
 
 .lado-esquerdo {
- padding: 10px;
+  padding: 10px;
   margin: auto;
   border-radius: 10px;
   width: 450px;
@@ -144,7 +145,7 @@ td {
   text-align: center;
 }
 
-.redes-sociais{
+.redes-sociais {
   margin: 10px;
   text-align: center;
 }
