--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@
   position: fixed;
 }
 
+#cabecalho {
+  position: fixed;
+  top: 0;
+}
+
 body {
   background-color: rgb(253 , 251 , 251);
   font-family: -apple-system, BlinkMacSystemFont, Roboto, Cantarell, sans-serif;
