--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@ body {
   height: 100vh;
   text-align: center;
   margin: auto;
-  background-color: rgb(253 ,251 ,251);
+  background-color: rgb(253 , 251 , 251);
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.1em;
   line-height: auto;
-  color: #2B2929;
+  color: rgb( 43 , 41 , 41);
 }
 
 #cabecalho {
@@ -23,7 +23,6 @@ body {
 #titulo {
   position: absolute;
   left: 100px;
-  font-family: 'Nerko One', 'Ancient Runes', cursive;
 }
 
 .option {
@@ -47,7 +46,7 @@ nav {
   margin-right: 40px;
   width: 200px;
   border-radius: 15px;
-  border: 3px solid #0FA36B;
+  border: 3px solid rgb( 15 , 163 , 107);
   position: relative;
   display: inline-block;
 }
@@ -60,7 +59,8 @@ nav {
   width: 450px;
   display: inline-block;
   margin-right: 50px;
-  background-color: #a1eace;
+  background-color: rgb(161 , 234 , 206);
+  ;
   text-align: justify;
 }
 
@@ -69,23 +69,23 @@ nav {
   width: 30%;
   display: inline-block;
   margin-top: 20px;
-  background-color: #a1eace;
+  background-color: rgb(161 , 234 , 206);
   text-align: justify;
   padding: 10px;
 }
 
 #lista1 {
-  border: 1px solid #0FA36B;
+  border: 1px solid rgb( 15 , 163 , 107);
   margin-top: 50px;
   margin-right: 15px;
   display: inline-block;
-  background-color: #a1eace;
+  background-color: rgb(161 , 234 , 206);
   border-radius: 10px;
 }
 
 #licoes_aprendidas {
   margin-top: 5px;
-  background-color: #a1eace;
+  background-color: rgb(161 , 234 , 206);
   text-align: left;
   display: inline-block;
 }
@@ -93,14 +93,14 @@ nav {
 #lista2 {
   margin-top: 50px;
   display: inline-block;
-  border: 1px solid #0FA36B;
-  background-color: #a1eace;
+  border: 1px solid rgb( 15 , 163 , 107);
+  background-color: rgb(161 , 234 , 206);
   border-radius: 10px;
 }
 
 #licoes_a_aprender {
   margin-top: 5px;
-  background-color: #a1eace;
+  background-color: rgb(161 , 234 , 206);
   width: 400px;
   text-align: left;
   display: inline-block;
@@ -109,7 +109,7 @@ nav {
 h2 {
   border-radius: 10px;
   width: 500px;
-  background-color: #0FA36B;
+  background-color: rgb( 15 , 163 , 107);
   margin: 0;
 }
 
@@ -118,20 +118,20 @@ h2 {
   margin: auto;
   margin-top: 80px;
   border-radius: 10px;
-  border: 1px solid #0FA36B;
+  border: 1px solid rgb( 15 , 163 , 107);
   background-color: white;
 }
 
 
 th {
-  background-color: #0FA36B;
+  background-color: rgb( 15 , 163 , 107);
   border-radius: 10px;
 }
 
 td {
   padding: 5px;
   border-radius: 10px;
-  background-color: #a1eace;
+  background-color: rgb(161 , 234 , 206);
 }
 
 
