--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
   letter-spacing: 1px;
 }
 
-.aside-right, #aprendizado {
+.aside-right {
   letter-spacing: 2px;
   text-align: end;
   background: rgb(79 121 140);
@@ -101,7 +101,7 @@ body {
 
 ul h2,ol h2 {
   font-size: medium;
-  font-family: texturina;
+  font-family: 'Texturina', serif;
   font-style: unset;
   letter-spacing: 3px;
 }
