--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   font-size: 10px;
   color: rgb(97 204 106);
   letter-spacing: 6px;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family: 'Nerko One', cursive;
 }
 
 #cabecalho {
